--- a/index/templates/index.html
+++ b/index/templates/index.html
@@ -12,6 +12,30 @@
   <title>{{ title }}</title>
 </head>
 <body>
+
+<header>
+  <nav class="navbar navbar-expand-lg navbar-dark bg-dark">
+    <div class="container">
+      <a class="navbar-brand" href="#">Navbar</a>
+      <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarSupportedContent"
+              aria-controls="navbarSupportedContent" aria-expanded="false" aria-label="Toggle navigation">
+        <span class="navbar-toggler-icon"></span>
+      </button>
+
+      <div class="collapse navbar-collapse" id="navbarSupportedContent">
+        <ul class="navbar-nav ml-auto">
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'account_login' %}">Login</a>
+          </li>
+          <li class="nav-item active">
+            <a class="nav-link" href="{% url 'account_signup' %}">Register</a>
+          </li>
+        </ul>
+      </div>
+    </div>
+  </nav>
+</header>
+
 <div class="container my-5 py-5 bg-light">
   <div class="row mb-5">
     <div class="col-md-12">
@@ -90,7 +114,7 @@
   </div>
 
   {% for category in product_category_mysql %}
-    {{ category }}
+  {{ category }}
   {% endfor %}
 
 </div>
